--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,10 @@ select = ["E", "F", "I", "B"]
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 
+[tool.setuptools.packages.find]
+include = ["app*"]
+exclude = ["alembic*", "tests*", "venv*"]
+
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
