--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "email-validator>=2.1",
     "pyjwt>=2.8",
     "passlib[bcrypt]>=1.7",
-    "bcrypt>=4.1",
+    "bcrypt==4.0.1",
     "python-dateutil>=2.9",
 ]
 
